Updated names in html files

--- a/website/Graphs.html
+++ b/website/Graphs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphs - Operation Diabetes Prevention</title>
-    <link rel="stylesheet" href="operations-diabetes-prevention.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
-                <li><a href="operations-diabetes-prevention.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="Graphs.html">Graphs</a></li>
                 <li><a href="Assessment.html">Assessment</a></li>
                 <li><a href="Team.html">Our Team</a></li>
