--- a/website/Operation-Diabetes-Prevention.html
+++ b/website/Operation-Diabetes-Prevention.html
@@ -41,4 +41,100 @@
         }
 
         /* Enhanced List Styling */
-        .
+        .key-points {
+            list-style-type: disc;
+            padding-left: 20px;
+            margin: 1em 0;
+            color: #4a4a4a;
+        }
+
+        /* Icon Styling */
+        .icon {
+            font-size: 1.2em;
+            color: #e76f51;
+            margin-right: 0.5em;
+        }
+
+        /* Divider between sections */
+        .divider {
+            height: 1px;
+            background-color: #d3d3d3;
+            margin: 2em 0;
+        }
+    </style>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="Operation-Diabetes-Prevention.html">Home</a></li>
+                <li><a href="Graphs.html">Graphs</a></li>
+                <li><a href="Team.html">Our Team</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Home Content -->
+    <section style="text-align: center;">
+        <h2>Operation Diabetes Prevention</h2>
+        <p>Welcome to the Operation Diabetes Prevention website!</p>
+    </section>
+
+    <!-- Insulin and Diabetes Section -->
+    <section>
+        <h3><i class="icon glyphicon glyphicon-heart"></i>Insulin and Diabetes Development</h3>
+        <p>
+            The pancreas creates insulin; insulin monitors how much glucose is within the blood.
+        </p>
+        <ul class="key-points">
+            <li>Cells can absorb glucose and use it to function and work.</li>
+            <li>When the body does not create an appropriate amount of insulin, glucose stays in the blood and is not used.</li>
+            <li>Glucose in the blood could lead to long-term health conditions, such as Diabetes.</li>
+            <li>In Type 2 diabetes, cells within the body begin to withdraw from the use of insulin.</li>
+            <li>The pancreas would try to create more insulin, but the pancreas may not be able to develop enough to keep up with rising glucose levels.</li>
+        </ul>
+    </section>
+
+    <div class="divider"></div>
+
+    <!-- Diabetes in Hispanic and Latino Communities Section -->
+    <section>
+        <h3><i class="icon glyphicon glyphicon-globe"></i>Diabetes in Hispanic and Latino Communities</h3>
+        <p>
+            In Hispanic and Latino communities, Diabetes tends to have more impact in these populations.
+        </p>
+        <ul class="key-points">
+            <li>Hispanic adults, compared to their non-Hispanic white counterparts, have a 70% chance of being diagnosed with Diabetes.</li>
+            <li>Various factors are significant, such as genomic components, socioeconomic class, and inadequate healthcare (CDC, Office of Minority Health).</li>
+            <li>The prevalence of Diabetes in Hispanic communities is higher than in many other demographic groups, with variations across subgroups.</li>
+            <li>For instance, Mexican Americans and Puerto Ricans have some of the highest rates, whereas Cuban Americans show lower prevalence rates.</li>
+            <li>These differences may stem from diverse genetic factors, cultural dietary practices, and levels of healthcare accessibility within subgroups (American Diabetes Association, CDC).</li>
+            <li>Hispanic populations with certain genomic factors may become prone to an ineffective use of insulin.</li>
+            <li>Without a proper regulatory system of insulin, individuals would be more susceptible to developing type 2 diabetes.</li>
+            <li>Traditional diets rich in carbohydrates and fats, combined with lower physical activity, increase risk.</li>
+            <li>Economic limitations can make it difficult to access healthy food options.</li>
+        </ul>
+    </section>
+
+    <div class="divider"></div>
+
+    <!-- Barriers to Diabetes Management Section -->
+    <section>
+        <h3><i class="icon glyphicon glyphicon-lock"></i>Barriers to Diabetes Management in Hispanic Populations</h3>
+        <p>
+            Poverty rates create an obstacle to affording proper healthcare.
+        </p>
+        <ul class="key-points">
+            <li>A lack of awareness and education regarding Diabetes may lead to significant complications (Office of Minority Health, CDC).</li>
+            <li>Limited health literacy in these communities can impede self-management, as Diabetes requires ongoing lifestyle changes and regular monitoring (American Diabetes Association, Office of Minority Health).</li>
+            <li>Diabetes significantly reduces life expectancy and quality of life due to complications such as neuropathy, cardiovascular disease, and kidney failure.</li>
+            <li>The economic burden of Diabetes is also substantial for Hispanic families, who face high out-of-pocket costs for medications, treatments, and hospitalizations (CDC, Office of Minority Health).</li>
+            <li>Without proper management, high blood sugar over time can cause complications like heart disease, kidney damage, and nerve damage.</li>
+        </ul>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</body>
+</html>
