--- a/website/Team.html
+++ b/website/Team.html
@@ -86,4 +86,47 @@
     <!-- Team Content -->
     <section class="team-section">
         <h2>Our Team</h2>
-        <p>Meet our dedicated team members wo
+        <p>Meet our dedicated team members working to prevent diabetes!</p>
+
+        <!-- Team Member 1 -->
+        <div class="team-member">
+            <h3>Lizbeth</h3>
+            <p><strong>Data Visualization</strong></p>
+            <p>Responsible for creating plots and heat map visualizations.</p>
+        </div>
+
+        <!-- Divider -->
+        <div class="divider"></div>
+
+        <!-- Team Member 2 -->
+        <div class="team-member">
+            <h3>Kaitly</h3>
+            <p><strong>Model Development</strong></p>
+            <p>Chooses machine learning algorithms, trains the model, and adjusts it to improve accuracy and performance.</p>
+        </div>
+
+        <!-- Divider -->
+        <div class="divider"></div>
+
+        <!-- Team Member 3 -->
+        <div class="team-member">
+            <h3>Patricia</h3>
+            <p><strong>Data Extraction</strong></p>
+            <p>Extracts specific data from public datasets for analysis.</p>
+        </div>
+
+        <!-- Divider -->
+        <div class="divider"></div>
+
+        <!-- Team Member 4 -->
+        <div class="team-member">
+            <h3>Suraya</h3>
+            <p><strong>Website Developer</strong></p>
+            <p>Develops the website using HTML, CSS, and UI to inform individuals about diabetes prevention.</p>
+        </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</body>
+</html>
